# line_bot

./: .gitignore  main.py  pyproject.toml  test.html
model/: api_line.py  google_mail.py  model.py
templates/: index.html  test.html  test2.html
