[tool.poetry]
name = "repl_python3_linebot"
version = "0.1.0"
description = ""
authors = ["yusyuan1208 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
line-bot-sdk = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
